# Diplom

./: CMakeLists.txt  README.md  config.cpp  config.h  config.ini  db.cpp  db.h  searcher.cpp  spider.cpp  utils.cpp  utils.h
